auto opened menu click blogs active and advisory team mobile layout spacing issue

--- a/src/components/contentItem/contentitem.component.scss
+++ b/src/components/contentItem/contentitem.component.scss
@@ -27,8 +27,8 @@
     transition:top 0.3s linear,right 0.3s linear;
   }
   .cover-hover{
-    visibility:visible;
-    opacity:1;
+    // visibility:visible;
+    // opacity:1;
     position: absolute;
     background-color: #01576e;
     // width: calc(100% - 6px);
