--- a/src/modules/menu/menu.module.scss
+++ b/src/modules/menu/menu.module.scss
@@ -519,8 +519,8 @@
     position: relative;
   }
   .cover-hover{
-    visibility:hidden;
-    opacity:0;
+    // visibility:hidden;
+    // opacity:0;
     position: absolute;
     background-color: #01576e;
     width: calc(100% - 6px);
@@ -531,8 +531,8 @@
   }
   &:hover{
     .cover-hover{
-      visibility:visible;
-      opacity:1;
+      // visibility:visible;
+      // opacity:1;
     }
   }
 }
